--- a/django_samba_ad/core/templates/user_edit.html
+++ b/django_samba_ad/core/templates/user_edit.html
@@ -5,7 +5,7 @@
 {% block content-title %}User edit{% endblock %}
 
 {% block content %}
-<form action="/url/to/submit/" method="post" class="form">
+<form method="post" class="form">
     {% csrf_token %}
     {% bootstrap_form form %}
     {% buttons %}
